<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Camera</string>
    <string name="text_register">新用户注册</string>
    <string name="text_forgetpassword">忘记密码？</string>
    <string name="edit_password">密码</string>
    <string name="edit_passwordagain">确认密码</string>
    <string name="edit_name">用户名</string>
	<string name="action_back">返回</string>
    
    
    
    
    <string name="hello_world">Hello world!</string>
    <string name="s">Camera</string>
    <string name="action_settings">Settings</string>
    <string name="x">Hello world!</string>
    
</resources>
