<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/loginbackground">
    

    <Button
        android:id="@+id/but_login2"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:background="@drawable/but_login2" />

    <TextView
        android:id="@+id/text_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/but_login2"
        android:layout_alignLeft="@+id/but_login2"
        android:layout_marginBottom="52dp"
        android:text="@string/text_register" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_password"
        android:layout_alignLeft="@+id/edit_password"
        android:layout_alignRight="@+id/but_login2"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/edit_name" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/text_forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/edit_password"
        android:layout_below="@+id/edit_password"
        android:text="@string/text_forgetpassword" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_register"
        android:layout_alignLeft="@+id/text_register"
        android:layout_alignRight="@+id/but_login2"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/edit_password"
        android:inputType="textPassword" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_name"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/but_loginback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/action_back" />

</RelativeLayout>